; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-s3c2443/extr_clock.c_s3c2443_prediv_getrate.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-s3c2443/extr_clock.c_s3c2443_prediv_getrate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk = type { i32 }

@S3C2443_CLKDIV0 = common dso_local global i32 0, align 4
@S3C2443_CLKDIV0_PREDIV_MASK = common dso_local global i64 0, align 8
@S3C2443_CLKDIV0_PREDIV_SHIFT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.clk*)* @s3c2443_prediv_getrate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @s3c2443_prediv_getrate(%struct.clk* %0) #0 {
  %2 = alloca %struct.clk*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store %struct.clk* %0, %struct.clk** %2, align 8
  %5 = load %struct.clk*, %struct.clk** %2, align 8
  %6 = getelementptr inbounds %struct.clk, %struct.clk* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i64 @clk_get_rate(i32 %7)
  store i64 %8, i64* %3, align 8
  %9 = load i32, i32* @S3C2443_CLKDIV0, align 4
  %10 = call i64 @__raw_readl(i32 %9)
  store i64 %10, i64* %4, align 8
  %11 = load i64, i64* @S3C2443_CLKDIV0_PREDIV_MASK, align 8
  %12 = load i64, i64* %4, align 8
  %13 = and i64 %12, %11
  store i64 %13, i64* %4, align 8
  %14 = load i64, i64* @S3C2443_CLKDIV0_PREDIV_SHIFT, align 8
  %15 = load i64, i64* %4, align 8
  %16 = lshr i64 %15, %14
  store i64 %16, i64* %4, align 8
  %17 = load i64, i64* %3, align 8
  %18 = load i64, i64* %4, align 8
  %19 = add i64 %18, 1
  %20 = udiv i64 %17, %19
  ret i64 %20
}

declare dso_local i64 @clk_get_rate(i32) #1

declare dso_local i64 @__raw_readl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
